--- a/Ex4BitArray64/Ex4BitArray64.csproj
+++ b/Ex4BitArray64/Ex4BitArray64.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitArray64.cs" />
+    <Compile Include="Class\BitArray64.cs" />
     <Compile Include="BitArrays.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
